k3s/nginx/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  # namespace: default
spec:
  # type: LoadBalancer
  # loadBalancerIP: 192.168.0.252  # Add your specific IP here
  selector:
    app: nginx
  ports:
  - name: http
    targetPort: 80
    port: 80
