k3s/nginx/ing.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  # namespace: nginx
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.nginx.k3s.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
    - match: Host(`nginx.k3s.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: wildcard-domain-tls-prod
